# education-backend

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  specializations.json
app/: manage.py
app/apps/education/admin/: __init__.py  educational_institution.py  educational_institution_type.py  educational_level.py
app/apps/education/migrations/: 0001_initial.py
app/apps/education/models/: __init__.py  educational_insitution.py  educational_insitution_type.py  educational_institution.py  educational_level.py
app/apps/professions/: apps.py
app/apps/professions/admin/: __init__.py  profession.py  sector.py
app/apps/professions/migrations/: 0001_initial.py
app/apps/professions/models/: __init__.py  profession.py  sector.py
app/apps/users/: __init__.py  models.py
app/apps/users/migrations/: 0001_initial.py
app/conf/settings/: __init__.py  django.py
app/core/: asgi.py  wsgi.py
app/extensions/django/db/: models.py
app/urls/: __init__.py
